@@ -31,6 +31,7 @@ Changelog
  * Fix: Creating a new object with inlines while mandatory fields are empty no longer crashes (Bertrand Bordage)
  * Fix: Localization of image and apps verbose names
  * Fix: Draftail editor no longer crashes after deleting image/embed using DEL key (Thibaud Colas)
+ * Fix: Breadcrumb navigation now respects custom `get_admin_display_title` methods (Arthur Holzner, Wietze Helmantel, Matt Westcott)
 
 
 2.0.1 (xx.xx.xxxx) - IN DEVELOPMENT
